# git_repo_onboard

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AgentPanel.jsx  AnimatedBackground.jsx  CodeModal.jsx  ControlPanel.jsx  NodePanel.jsx  PathPanel.jsx  SearchPanel.jsx  StatsPanel.jsx  StatusToast.jsx  TopBar.jsx
frontend/src/components/charts/: TopologyGraph.jsx  TreeMap.jsx
frontend/src/lib/: agenticGraph.js
frontend/src/state/: useAppState.js
frontend/src/styles/: base.css  layout.css  motion.css  panels.css  tokens.css
frontend/src/three/: GraphScene.jsx  layout.js
src/github_viz/: __init__.py  cli.py  config.py  logging_config.py  server.py
src/github_viz/analysis/: __init__.py  github_client.py  graph.py  llm.py  models.py  parser.py  scanner.py  stats.py
src/github_viz/api/: __init__.py  schemas.py  state.py
tests/: test_graph.py  test_parser.py  test_server.py
