[project]
name = "github-viz"
version = "0.3.0"
description = "3D visualization of codebases with GitHub + AI enrichment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "requests>=2.32",
  "rich>=13.7",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.scripts]
codegraph = "github_viz.cli:app"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
